--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="w-50 text-center border border-5">
       <h1 class="bg-warning py-5 mb-0">Boostrap DEMO</h1>
       <button type="button" class="btn btn-primary w-100">Primary</button>
+      <button type="button" class="btn btn-success w-100">Success</button>
     </div>
 
     <script
