--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <h1 class="bg-warning py-5 mb-0">Boostrap DEMO</h1>
       <button type="button" class="btn btn-primary w-100">Primary</button>
       <button type="button" class="btn btn-success w-100">Success</button>
+      <button type="button" class="btn btn-dark w-100">Dark</button>
     </div>
 
     <script
