added joshua images

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="col-12 col-md-6 bg-dark">
           <img
             class="img-fluid w-100"
-            src="https://www.placehold.co/500"
+            src="imgs/joshua-tsu-AUg1cYVLXGU-unsplash.jpg"
             alt=""
           />
         </div>
