--- a/AbdulAhad/index.html
+++ b/AbdulAhad/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 </head>
+<style>
+    body {
+        margin: 0px;
+    }
+
+    .h2 {
+        display: flex;
+        gap: 200px;
+        justify-content: center;
+        margin: 100px;
+    }
+
+    .h1 {
+
+        display: flex;
+        width: 10px;
+        height: 150px;
+    }
+
+    .h1:hover {
+        transform: scale(1.25);
+        transition-duration: 0.6s;
+        
+
+    }
+</style>
+
 <body>
-    <h1>Welcome AbdulAhad/h1>
+    <div class="h2">
+        <div class="h1">
+            <img src="profile za enterprises.jpg" alt="">
+        </div>
+        <div class="h1">
+            <img src="profile za enterprises.jpg" alt="">
+        </div>
+        <div class="h1">
+            <img src="profile za enterprises.jpg" alt="">
+        </div>
+        <div class="h1">
+            <img src="profile za enterprises.jpg" alt="">
+        </div>
+        <div class="h1">
+            <img src="profile za enterprises.jpg" alt="">
+        </div>
+    </div>
 </body>
 </html>
